# mylib

./: CMakeLists.txt
src/: mylib.cpp  mylib.h
